--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 dist: bionic
 
 script:
-- apt install flake8
-- flake8  # execute flake8 on current dir recursively
 - sudo ./bootstrap.sh
+- pip3 install flake8
+- flake8  # execute flake8 on current dir recursively
