--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
+aws==0.2.5
+bcrypt==3.1.7
 Flask==1.1.1
+Flask-Bcrypt==0.7.1
+Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.3
 pytest==5.4.1
 requests==2.23.0
-aws==0.2.5
+SQLAlchemy==1.3.15
+WTForms==2.2.1
