adding profiles 'stage' and 'prod' to Vagrantfile

--- a/.env_template
+++ b/.env_template
@@ -1,5 +1,21 @@
-SUBNET_ID=
-SECURITY_GROUPS=
-PRIVATE_KEY_PATH=
-KEY_NAME=
-REGION=
+### PROD ###
+PROFILE_PROD=''
+KEY_NAME_PROD=''
+AMI_PROD=''
+INSTANCE_TYPE_PROD=''
+REGION_PROD=''
+SUBNET_ID_PROD=''
+SECURITY_GROUPS_PROD=''
+USERNAME_PROD=''
+PRIVATE_KEY_PATH_PROD=''
+
+### STAGE ###
+PROFILE_STAGE=''
+KEY_NAME_STAGE=''
+AMI_STAGE=''
+INSTANCE_TYPE_STAGE=''
+REGION_STAGE=''
+SUBNET_ID_STAGE=''
+SECURITY_GROUPS_STAGE=''
+USERNAME_STAGE=''
+PRIVATE_KEY_PATH_STAGE=''
