adding profiles 'stage' and 'prod' to Vagrantfile

--- a/.env_template
+++ b/.env_template
@@ -1,5 +1,21 @@
-SUBNET_ID=
-SECURITY_GROUPS=
-PRIVATE_KEY_PATH=
-KEY_NAME=
-REGION=
+### PROD ###
+PROFILE_PROD='prod'
+KEY_NAME_PROD=''
+AMI_PROD='ami-0701e7be9b2a77600'
+INSTANCE_TYPE_PROD='t2.micro'
+REGION_PROD='eu-west-1'
+SUBNET_ID_PROD='subnet-6e704508'
+SECURITY_GROUPS_PROD='sg-82e5cec1'
+USERNAME_PROD='ubuntu'
+PRIVATE_KEY_PATH_PROD=''
+
+### STAGE ###
+PROFILE_STAGE='stage'
+KEY_NAME_STAGE=''
+AMI_STAGE='ami-0701e7be9b2a77600'
+INSTANCE_TYPE_STAGE='t2.micro'
+REGION_STAGE='eu-west-1'
+SUBNET_ID_STAGE='subnet-1c86b754'
+SECURITY_GROUPS_STAGE='sg-71952b3f'
+USERNAME_STAGE='ubuntu'
+PRIVATE_KEY_PATH_STAGE=''
