Adding Comments to make the values in this file more friendly to consume.

--- a/.env_template
+++ b/.env_template
@@ -1,21 +1,41 @@
+############
 ### PROD ###
-PROFILE_PROD=''
+############
+
+PROFILE_PROD='prod'
+AMI_PROD='ami-0701e7be9b2a77600'
+INSTANCE_TYPE_PROD='t2.micro'
+REGION_PROD='eu-west-1'
+USERNAME_PROD='ubuntu'
+
+### PROD AWS CERDENTIALS ###
+# AWS Subnet ID from the EC2 console Network Interface menu
+SUBNET_ID_PROD='subnet-6e704508'
+# AWS Security Group ID from the EC2 console Security Group menu
+SECURITY_GROUPS_PROD='sg-82e5cec1'
+
+# AWS Private Key Name from the EC2 menu : Key pairs : name  
 KEY_NAME_PROD=''
-AMI_PROD=''
-INSTANCE_TYPE_PROD=''
-REGION_PROD=''
-SUBNET_ID_PROD=''
-SECURITY_GROUPS_PROD=''
-USERNAME_PROD=''
+# /home/<username>/.ssh/<filename>.pem download from the EC2 menu : Create Key pair .pem file.
 PRIVATE_KEY_PATH_PROD=''
 
+#############
 ### STAGE ###
-PROFILE_STAGE=''
-KEY_NAME_STAGE=''
-AMI_STAGE=''
-INSTANCE_TYPE_STAGE=''
-REGION_STAGE=''
+#############
+
+PROFILE_STAGE='stage'
+AMI_STAGE='ami-0701e7be9b2a77600'
+INSTANCE_TYPE_STAGE='t2.micro'
+REGION_STAGE='eu-west-1'
+USERNAME_STAGE='ubuntu'
+
+### STAGE AWS CREDENTIALS ###
+# AWS Subnet ID from the EC2 console Network Interface menu
 SUBNET_ID_STAGE=''
+# AWS Security Group ID from the EC2 console Security Group menu
 SECURITY_GROUPS_STAGE=''
-USERNAME_STAGE=''
+
+# AWS Private Key Name from the EC2 menu : Key pairs : name  
+KEY_NAME_STAGE=''
+# /home/<username>/.ssh/<filename>.pem download from the EC2 menu : Create Key pair .pem file.
 PRIVATE_KEY_PATH_STAGE=''
