Added configuration for Elastic IP and added elastic ip env variable to .env_template

--- a/.env_template
+++ b/.env_template
@@ -7,6 +7,7 @@ AMI_PROD='ami-0701e7be9b2a77600'
 INSTANCE_TYPE_PROD='t2.micro'
 REGION_PROD='eu-west-1'
 USERNAME_PROD='ubuntu'
+ELASTIC_IP='54.228.108.127'
 
 ### PROD AWS CERDENTIALS ###
 # AWS Subnet ID from the EC2 console Network Interface menu
