Introduce docker-compose for building the image and running container
In this PR the following was introduced:
- docker-compose.yml for building image named 'beyond' and running it
  with shell
- Vagrant file - adding 'vagrant-docker-compose' plugin, provisioning
  'docker-compose', rebuilding the image using the above yml and running
   the container.
- Added docker container test to check whether our container is up, and
  added the needed dependency for this to run.
- GitHub actions - adding a step for building and running our container
  with docker-compose.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,9 @@ jobs:
         tar -xzf geckodriver-v0.26.0-linux64.tar.gz -C geckodriver
         pip install -r tests/requirements-test.txt
 
+    - name: Build the docker-compose stack
+      run: docker-compose up -d
+
     - name: Execute tests
       run: |
         pytest
