--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,15 @@ services:
     container_name: beyond
     ports:
       - "5000:5000"
+
+  db:
+    image: postgres:13.2
+    container_name: postgres
+    environment:
+      POSTGRES_USER: beyond
+      POSTGRES_PASSWORD: beyond
+      POSTGRES_DB: beyond
+    expose:
+      - 5432
+    ports:
+      - 5432:5432
